--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^3.0.1
   cloud_firestore: ^4.2.0
   intl: ^0.18.0
+  flutter_speed_dial: ^6.2.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
