--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cloud_firestore: ^4.2.0
   intl: ^0.18.0
   flutter_speed_dial: ^6.2.0
+  image_picker: ^0.8.6
+  image_cropper: ^3.0.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
