--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_speed_dial: ^6.2.0
   image_picker: ^0.8.6
   image_cropper: ^3.0.1
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
