--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_cropper: ^3.0.1
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
