--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,24 +29,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.0
+  cloud_firestore: ^4.2.0
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  firebase_auth: ^4.2.4
+  firebase_core: ^2.4.1
+  firebase_storage: ^11.0.10
   flutter:
     sdk: flutter
-  google_fonts: ^3.0.1
-  cloud_firestore: ^4.2.0
-  intl: ^0.18.0
-  flutter_speed_dial: ^6.2.0
-  image_picker: ^0.8.6
-  image_cropper: ^3.0.1
-  bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  flutter_speed_dial: ^6.2.0
+  google_fonts: ^3.0.1
+  image_cropper: ^3.0.1
+  image_picker: ^0.8.6
+  intl: ^0.18.0
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
