--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^3.0.1
   image_cropper: ^3.0.1
   image_picker: ^0.8.6
+  photo_view: ^0.14.0
   intl: ^0.17.0
 
 dev_dependencies:
