--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
   bloc: ^8.1.0
   cloud_firestore: ^4.2.0
   cupertino_icons: ^1.0.2
@@ -38,13 +36,16 @@ dependencies:
   firebase_auth: ^4.2.4
   firebase_core: ^2.4.1
   firebase_storage: ^11.0.10
+  flutter:
+    sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_speed_dial: ^6.2.0
   google_fonts: ^3.0.1
   image_cropper: ^3.0.1
   image_picker: ^0.8.6
-  photo_view: ^0.14.0
   intl: ^0.17.0
+  photo_view: ^0.14.0
+  timeago: ^3.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
