--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.17.0
   photo_view: ^0.14.0
   timeago: ^3.3.0
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
