--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,31 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "moodly",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "moodly (profile mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "moodly (release mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "moodly",
+      "request": "launch",
+      "type": "dart"
+    },
+    {
+      "name": "Pixel 4",
+      "request": "launch",
+      "type": "dart",
+      "deviceId": "emulator-5554"
+    },
+    {
+      "name": "Pixel 2",
+      "request": "launch",
+      "type": "dart",
+      "deviceId": "emulator-5556"
+    }
+  ],
+  "compounds": [
+    {
+      "name": "All Devices",
+      "configurations": ["Pixel 4", "Pixel 2"]
+    }
+  ]
 }
